feat: add diff type to swagger
